--- a/templates/player.html
+++ b/templates/player.html
@@ -11,6 +11,8 @@
 
     <script>
       const TOKEN_URL = "{{ url('token') }}";
+      const SOCKET_URL = "{{ socket_url }}";
+      const IS_HOST = "{{ is_host }}";
     </script>
     <script src="https://sdk.scdn.co/spotify-player.js"></script>
     <script src="{{ static('js/player.js') }}"></script>
