--- a/src/spotify_party/templates/room.html
+++ b/src/spotify_party/templates/room.html
@@ -10,9 +10,12 @@
 <!--  -->
 {% block scripts %}
 <script src="https://sdk.scdn.co/spotify-player.js"></script>
+<script
+  type="text/javascript"
+  src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.slim.js"
+></script>
 <script>
   const TOKEN_URL = "{{ url('token') }}";
-  const SOCKET_URL = "{{ socket_url }}";
   const IS_HOST = "{{ is_host }}";
 </script>
 <script src="{{ static('js/player.js') }}"></script>
