more work on the frontend

--- a/src/spotify_party/templates/splash.html
+++ b/src/spotify_party/templates/splash.html
@@ -1,5 +1,9 @@
 {% extends "layout.html" %}
 <!--  -->
+{% block extrahead %}
+<link rel="stylesheet" href="{{ static('splash.css') }}" />
+{% endblock %}
+<!--  -->
 {% block body %}
 <main role="main" class="inner cover">
   <h1 class="cover-heading">Distance.</h1>
