--- a/src/spotify_party/templates/layout.html
+++ b/src/spotify_party/templates/layout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{%- block title -%}Spotify Party{%- endblock -%}</title>
+    <title>{%- block title -%}Distance{%- endblock -%}</title>
 
     <link
       rel="stylesheet"
