--- a/src/spotify_party/templates/listen.html
+++ b/src/spotify_party/templates/listen.html
@@ -1,5 +1,7 @@
 {% extends "layout.html" %}
 <!--  -->
+{%- block title -%}Distance: Listening{%- endblock -%}
+<!--  -->
 {% block extrahead %}
 <link rel="stylesheet" href="{{ static('listen.css') }}" />
 {% endblock %}
