--- a/src/spotify_party/templates/play.html
+++ b/src/spotify_party/templates/play.html
@@ -1,5 +1,7 @@
 {% extends "layout.html" %}
 <!--  -->
+{%- block title -%}Distance: Broadcasting{%- endblock -%}
+<!--  -->
 {% block extrahead %}
 <link rel="stylesheet" href="{{ static('play.css') }}" />
 {% endblock %}
