adding some custom error pages

--- a/src/frontend/style/base.css
+++ b/src/frontend/style/base.css
@@ -92,3 +92,19 @@ body {
   text-decoration: underline;
   cursor: pointer;
 }
+
+.room-name {
+  border: none;
+  text-align: center;
+  font-weight: 500;
+  font-size: 2rem;
+  margin: 0 0 2rem 0;
+  padding: 0;
+  display: block;
+  width: 100%;
+  border-bottom: 1px solid #fff;
+}
+
+.room-name:focus {
+  border-bottom-color: #333;
+}
