--- a/src/spotify_party/templates/play.html
+++ b/src/spotify_party/templates/play.html
@@ -18,7 +18,8 @@
 <script>
   window.onSpotifyWebPlaybackSDKReady = () => {
     SpotifyPartyApp.renderPlayer(
-      "{{ room_id }}",
+      "{{ user_id }}",
+      "{{ room_name }}",
       document.getElementById("app")
     );
   };
