--- a/src/spotify_party/templates/layout.html
+++ b/src/spotify_party/templates/layout.html
@@ -77,14 +77,12 @@
             <a href="https://github.com/dfm/spotify-party/issues"
               >report issues on GitHub</a
             >.<br />
-            Icon made by
+            Icon by
             <a href="https://www.flaticon.com/authors/freepik" title="Freepik"
               >Freepik</a
             >
             from
-            <a href="https://www.flaticon.com/" title="Flaticon"
-              >www.flaticon.com</a
-            >
+            <a href="https://www.flaticon.com/" title="Flaticon">Flaticon</a>.
           </p>
         </div>
       </footer>
