--- a/src/spotify_party/templates/rooms.html
+++ b/src/spotify_party/templates/rooms.html
@@ -8,16 +8,14 @@
 <!--  -->
 {% block body %}
 <main role="main" class="inner cover">
-  <div id="app" class="lead">
-    {% if len(rooms) > 0 %}
-    <ul>
+  <p>
+    {% if rooms|length > 0 %}
       {% for room in rooms %}
-        <li><a href="/{{ room }}">{{ room }}</a></li>
+        <li><a href="/listen/{{ room[0] }}">{{ room[0] }}</a></li>
       {% endfor %}
-    </ul>
-    {% elif len(rooms) == 0 %}
+    {% else %}
       No public streams are available!
     {% endif %}
-  </div>
+  </p>
 </main>
 {% endblock %}
