--- a/src/spotify_party/templates/rooms.html
+++ b/src/spotify_party/templates/rooms.html
@@ -9,13 +9,11 @@
 {% block body %}
 <main role="main" class="inner cover">
   <p>
-    {% if rooms|length > 0 %}
-      {% for room in rooms %}
-        <li><a href="/listen/{{ room[0] }}">{{ room[0] }}</a></li>
-      {% endfor %}
-    {% else %}
-      No public streams are available!
-    {% endif %}
+    {% if rooms|length > 0 %} {% for room in rooms %}
+    <li>
+      <a href="{{ room_url('listen', room_id=room[0]) }}">{{ room[0] }}</a>
+    </li>
+    {% endfor %} {% else %} No public streams are available! {% endif %}
   </p>
 </main>
 {% endblock %}
